[gd_scene load_steps=6 format=3 uid="uid://p7i1o7mg8ojk"]

[ext_resource type="Texture2D" uid="uid://cfiidxupijtb8" path="res://addons/audiologic/ProfilePictures/PlaceHolder_size3_transparent.png" id="1_immih"]
[ext_resource type="Theme" uid="uid://bvgy04f6861yd" path="res://addons/audiologic/themes/high_contrast.tres" id="1_qkxdw"]
[ext_resource type="Script" path="res://addons/audiologic/Scripts/menu_scripts/example_menu.gd" id="2_ndtt1"]
[ext_resource type="Shader" path="res://addons/audiologic/MenuTemplates/WaveFormShader.gdshader" id="3_dfljk"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_30fdb"]
shader = ExtResource("3_dfljk")
shader_parameter/lines = 320
shader_parameter/amplitude = 0.9
shader_parameter/frequency = 0.1
shader_parameter/intensity = 0.75
shader_parameter/line_sharpness = 0.5
shader_parameter/line_size = 0.559
shader_parameter/fade = 0.1
shader_parameter/rest_size = -0.2
shader_parameter/edge = 0.05
shader_parameter/speed = 0.5
shader_parameter/color = Color(0.411765, 0.447059, 0.811765, 1)
shader_parameter/dot_matrix = false
shader_parameter/dot_matriz_size = 80
shader_parameter/speech_sim = true
shader_parameter/speech_intensity = 0.8
shader_parameter/progress = 0.308

[node name="ExampleMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_qkxdw")
script = ExtResource("2_ndtt1")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/separation = -1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = -1

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer/PanelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="AudioLogSelector" type="ScrollContainer" parent="MarginContainer/VBoxContainer/PanelContainer/HBoxContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ButtonContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/PanelContainer/HBoxContainer/VBoxContainer/PanelContainer/AudioLogSelector"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/PanelContainer/HBoxContainer/VBoxContainer/PanelContainer/AudioLogSelector/ButtonContainer"]
layout_mode = 2
text = "Test Button"

[node name="PanelContainer2" type="PanelContainer" parent="MarginContainer/VBoxContainer/PanelContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Subtitles" type="RichTextLabel" parent="MarginContainer/VBoxContainer/PanelContainer/HBoxContainer/VBoxContainer/PanelContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
text = "This is a place where the subtitles will go if supplied	"

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2

[node name="PortraitBox" type="VBoxContainer" parent="MarginContainer/VBoxContainer/PanelContainer/HBoxContainer/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Portrait" type="TextureRect" parent="MarginContainer/VBoxContainer/PanelContainer/HBoxContainer/PanelContainer/PortraitBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(275, 387.5)
layout_mode = 2
texture = ExtResource("1_immih")
expand_mode = 4
stretch_mode = 6

[node name="SpeakerName" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer/HBoxContainer/PanelContainer/PortraitBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Speaker Name"
horizontal_alignment = 1

[node name="PanelContainer2" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="WaveBox" type="VBoxContainer" parent="MarginContainer/VBoxContainer/PanelContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="WaveForm" type="ColorRect" parent="MarginContainer/VBoxContainer/PanelContainer2/WaveBox"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_30fdb")
layout_mode = 2
size_flags_vertical = 3

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
